--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "scripts": {
     "start": "parcel ./src/index.html",
     "build": "parcel build ./src/index.html --public-url ./",
-    "deploy":
-      "npm run build && gh-pages -a -d dist -r git@github.com:claydiffrient/flash-cards.git",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "deploy": "npm run build && gh-pages -a -d dist -r git@github.com:claydiffrient/flash-cards.git",
+    "test": "jest"
   },
-  "keywords": ["flash", "cards", "learning"],
+  "keywords": [
+    "flash",
+    "cards",
+    "learning"
+  ],
   "author": "Clay Diffrient",
   "license": "MIT",
   "dependencies": {
@@ -26,15 +29,21 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "cssnext": "^1.8.4",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme-to-json": "^3.3.0",
     "eslint": "^4.15.0",
     "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-jest": "^21.7.0",
     "eslint-plugin-prettier": "^2.5.0",
     "eslint-plugin-react": "^7.5.1",
     "gh-pages": "^1.1.0",
+    "jest": "^22.1.4",
     "parcel-bundler": "^1.4.1",
     "postcss-cssnext": "^3.0.2",
     "postcss-modules": "^1.1.0",
     "prettier": "^1.10.2",
+    "prop-types": "^15.6.0",
     "react-hot-loader": "^3.1.3"
   }
 }
