--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,12 @@
 {
-  "presets": ["env", "react", "stage-0"]
+  "presets": ["env", "react", "stage-0"],
+  "plugins": [
+    "@instructure/babel-plugin-transform-class-display-name",
+    [
+      "@instructure/babel-plugin-themeable-styles",
+      {
+        "ignore": "node_modules/**/*"
+      }
+    ]
+  ]
 }
