--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "@instructure/ui-core": "^4.7.0",
     "@instructure/ui-themes": "^4.7.0",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "react-loadable": "^5.3.1",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2"
   },
   "devDependencies": {
     "@instructure/babel-plugin-themeable-styles": "^4.7.0",
