--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,11 @@
 language: node_js
 node_js:
   - node
-script: npm test
+install:
+  - npm install
+  - npm install -g codecov
+script:
+  - npm test -- --coverage && codecov
 # deploy:
 #   provider: pages
 #   skip-cleanup: true
