--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "eslint-plugin-prettier": "^2.5.0",
     "eslint-plugin-react": "^7.5.1",
     "gh-pages": "^1.1.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^22.1.4",
     "parcel-bundler": "^1.5.0",
     "postcss-cssnext": "^3.0.2",
