--- a/package.json
+++ b/package.json
@@ -19,11 +19,17 @@
   "dependencies": {
     "@instructure/ui-core": "^4.7.0",
     "@instructure/ui-themes": "^4.7.0",
+    "axios": "^0.17.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-loadable": "^5.3.1",
+    "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2",
+    "redux-actions": "^2.2.1",
+    "redux-offline": "^2.0.0",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "@instructure/babel-plugin-themeable-styles": "^4.7.0",
@@ -51,6 +57,7 @@
     "postcss-modules": "^1.1.0",
     "prettier": "^1.10.2",
     "prop-types": "^15.6.0",
-    "react-hot-loader": "^3.1.3"
+    "react-hot-loader": "^3.1.3",
+    "redux-logger": "^3.0.6"
   }
 }
