--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@instructure/ui-core": "^4.7.0",
     "@instructure/ui-themes": "^4.7.0",
     "axios": "^0.17.1",
+    "instructure-icons": "^4.3.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-loadable": "^5.3.1",
