--- a/package.json
+++ b/package.json
@@ -24,13 +24,15 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-loadable": "^5.3.1",
+    "react-quill": "^1.2.3",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "redux-actions": "^2.2.1",
     "redux-offline": "^2.0.0",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "xss": "^0.3.7"
   },
   "devDependencies": {
     "@instructure/babel-plugin-themeable-styles": "^4.7.0",
