--- a/package.json
+++ b/package.json
@@ -58,9 +58,12 @@
     "parcel-bundler": "^1.4.1",
     "postcss-cssnext": "^3.0.2",
     "postcss-modules": "^1.1.0",
+    "pouchdb": "^6.4.3",
+    "pouchdb-find": "^6.4.3",
     "prettier": "^1.10.2",
     "prop-types": "^15.6.0",
     "react-hot-loader": "^3.1.3",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "relational-pouch": "^3.0.1"
   }
 }
