--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "start": "parcel ./src/index.html",
     "build": "scripts/build.sh",
     "deploy": "npm run build && gh-pages -d dist -r git@github.com:claydiffrient/flash-cards.git",
-    "test": "jest"
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run",
+    "test": "run-p --print-label test:*",
+    "test:integration": "start-server-and-test start http://localhost:1234 cypress:run",
+    "test:unit": "jest"
   },
   "keywords": [
     "flash",
@@ -45,17 +49,20 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "cssnext": "^1.8.4",
+    "cypress": "^1.4.2",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.3.0",
     "eslint": "^4.15.0",
     "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-cypress": "^2.0.1",
     "eslint-plugin-jest": "^21.7.0",
     "eslint-plugin-prettier": "^2.5.0",
     "eslint-plugin-react": "^7.5.1",
     "gh-pages": "^1.1.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^22.1.4",
+    "npm-run-all": "^4.1.2",
     "parcel-bundler": "^1.4.1",
     "postcss-cssnext": "^3.0.2",
     "postcss-modules": "^1.1.0",
@@ -65,6 +72,7 @@
     "prop-types": "^15.6.0",
     "react-hot-loader": "^3.1.3",
     "redux-logger": "^3.0.6",
-    "relational-pouch": "^3.0.1"
+    "relational-pouch": "^3.0.1",
+    "start-server-and-test": "^1.0.0"
   }
 }
