--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "postcss-modules": "^1.1.0",
     "pouchdb": "^6.4.3",
     "pouchdb-adapter-memory": "^6.4.3",
+    "pouchdb-erase": "^1.0.2",
     "pouchdb-find": "^6.4.3",
     "prettier": "^1.10.2",
     "prop-types": "^15.6.0",
