--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "parcel ./src/index.html",
     "build": "scripts/build.sh",
-    "deploy": "npm run build && gh-pages -d dist -r git@github.com:claydiffrient/flash-cards.git",
+    "deploy": "npm run build && node scripts/deploy.js",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run",
     "test": "run-p --print-label test:*",
@@ -62,6 +62,7 @@
     "gh-pages": "^1.1.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^22.1.4",
+    "moment": "^2.20.1",
     "npm-run-all": "^4.1.2",
     "parcel-bundler": "^1.4.1",
     "postcss-cssnext": "^3.0.2",
@@ -75,6 +76,7 @@
     "react-hot-loader": "^3.1.3",
     "redux-logger": "^3.0.6",
     "relational-pouch": "^3.0.1",
+    "shelljs": "^0.8.1",
     "start-server-and-test": "^1.0.0"
   }
 }
