--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-polyfill": "^6.26.0",
     "instructure-icons": "^4.3.2",
     "react": "^16.2.0",
+    "react-card-flip": "claydiffrient/react-card-flip",
     "react-dom": "^16.2.0",
     "react-loadable": "^5.3.1",
     "react-quill": "^1.2.3",
