--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "babel-polyfill": "^6.26.0",
     "instructure-icons": "^4.3.2",
     "react": "^16.2.0",
-    "react-card-flip": "claydiffrient/react-card-flip",
+    "react-card-flip": "^0.2.1",
     "react-dom": "^16.2.0",
     "react-loadable": "^5.3.1",
     "react-quill": "^1.2.3",
@@ -46,6 +46,7 @@
     "@instructure/postcss-themeable-styles": "^4.7.0",
     "autoprefixer": "^7.2.5",
     "babel-eslint": "^8.2.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
@@ -65,7 +66,7 @@
     "jest": "^22.1.4",
     "moment": "^2.20.1",
     "npm-run-all": "^4.1.2",
-    "parcel-bundler": "^1.4.1",
+    "parcel-bundler": "^1.6.2",
     "postcss-cssnext": "^3.0.2",
     "postcss-modules": "^1.1.0",
     "pouchdb": "^6.4.3",
