--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ install:
   - npm install
   - npm install -g codecov
 script:
+  - npm run test:prettier
+  - npm run test:lint
   - npm run test:unit -- --coverage && codecov
   - npm run test:integration
 # deploy:
