--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test:integration":
       "NODE_ENV=test start-server-and-test start http://localhost:1234 cypress:run",
     "test:unit": "jest",
-    "test:lint": "eslint --no-inline-config \"./src/**/*.js\"",
+    "test:lint": "eslint --no-inline-config \"{src, cypress}/**/*.js\"",
     "test:prettier": "prettier --list-different \"{src, cypress}/**/*.js\"",
     "precommit": "lint-staged"
   },
@@ -85,6 +85,6 @@
   },
   "lint-staged": {
     "*.{json,css,md}": ["prettier --write", "git add"],
-    "*.js": ["eslint --fix", "git add"]
+    "{src, cypress}/**/*.js": ["eslint --fix", "git add"]
   }
 }
