--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "core-js": "^2.5.4",
     "cssnext": "^1.8.4",
     "cypress": "^2.1.0",
     "enzyme": "^3.3.0",
@@ -68,7 +69,7 @@
     "lint-staged": "^7.0.0",
     "moment": "^2.20.1",
     "npm-run-all": "^4.1.2",
-    "parcel-bundler": "^1.6.2",
+    "parcel-bundler": "^1.7.0",
     "postcss-cssnext": "^3.0.2",
     "postcss-modules": "^1.1.0",
     "pouchdb": "^6.4.3",
