Update to InstUI 5

--- a/package.json
+++ b/package.json
@@ -21,22 +21,29 @@
   "author": "Clay Diffrient",
   "license": "MIT",
   "dependencies": {
-    "@instructure/ui-core": "^5.0.0",
-    "@instructure/ui-themes": "^5.0.0",
+    "@instructure/ui-billboard": "^5.0.0",
+    "@instructure/ui-buttons": "^5.0.0",
+    "@instructure/ui-container": "^5.0.0",
+    "@instructure/ui-elements": "^5.0.0",
+    "@instructure/ui-forms": "^5.0.0",
+    "@instructure/ui-layout": "^5.0.0",
+    "@instructure/ui-menu": "^5.0.0",
+    "@instructure/ui-overlays": "^5.0.0",
     "@instructure/ui-themeable": "^5.0.0",
+    "@instructure/ui-themes": "^5.0.0",
     "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
     "instructure-icons": "^4.3.2",
-    "react": "^16.2.0",
+    "react": "^16.3.0",
     "react-card-flip": "^0.2.1",
-    "react-dom": "^16.2.0",
+    "react-dom": "^16.3.0",
     "react-loadable": "^5.3.1",
-    "react-quill": "^1.2.3",
+    "react-quill": "^1.2.6",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
-    "redux-actions": "^2.2.1",
+    "redux-actions": "^2.3.0",
     "redux-offline": "^2.0.0",
     "redux-thunk": "^2.2.0",
     "xss": "^0.3.7"
@@ -45,6 +52,7 @@
     "@instructure/babel-plugin-themeable-styles": "^5.0.0",
     "@instructure/babel-plugin-transform-class-display-name": "^5.0.0",
     "@instructure/postcss-themeable-styles": "^5.0.0",
+    "@instructure/ui-codemods": "^5.0.0",
     "autoprefixer": "^8.2.0",
     "babel-eslint": "^8.2.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
@@ -56,19 +64,19 @@
     "cypress": "^2.1.0",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
-    "enzyme-to-json": "^3.3.0",
-    "eslint": "^4.15.0",
+    "enzyme-to-json": "^3.3.3",
+    "eslint": "^4.19.1",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-cypress": "^2.0.1",
-    "eslint-plugin-jest": "^21.7.0",
+    "eslint-plugin-jest": "^21.15.0",
     "eslint-plugin-prettier": "^2.5.0",
     "eslint-plugin-react": "^7.5.1",
     "gh-pages": "^1.1.0",
     "husky": "^0.14.3",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^22.1.4",
-    "lint-staged": "^7.0.0",
-    "moment": "^2.20.1",
+    "jest": "^22.4.3",
+    "lint-staged": "^7.0.2",
+    "moment": "^2.22.0",
     "npm-run-all": "^4.1.2",
     "parcel-bundler": "^1.7.0",
     "postcss-cssnext": "^3.0.2",
@@ -77,13 +85,13 @@
     "pouchdb-adapter-memory": "^6.4.3",
     "pouchdb-erase": "^1.0.2",
     "pouchdb-find": "^6.4.3",
-    "prettier": "^1.10.2",
-    "prop-types": "^15.6.0",
+    "prettier": "^1.11.1",
+    "prop-types": "^15.6.1",
     "react-hot-loader": "^4.0.1",
     "redux-logger": "^3.0.6",
     "relational-pouch": "^3.0.1",
     "shelljs": "^0.8.1",
-    "start-server-and-test": "^1.0.0"
+    "start-server-and-test": "^1.1.4"
   },
   "lint-staged": {
     "*.{json,css,md}": ["prettier --write", "git add"],
