--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
     "instructure-icons": "^4.3.2",
+    "raven-js": "^3.24.0",
     "react": "^16.3.0",
     "react-card-flip": "^0.2.1",
     "react-dom": "^16.3.0",
